--- a/frontend/src/pages/AssignmentList.css
+++ b/frontend/src/pages/AssignmentList.css
@@ -41,3 +41,37 @@
     background-color: #45a049;
   }
   
+
+  #persons{
+
+    overflow: scroll;
+
+}
+
+
+#persons::-webkit-scrollbar {
+    display: none;
+  }
+  
+#persons {
+    -ms-overflow-style: none;
+    scrollbar-width: none;  
+}
+
+
+.person{
+    cursor: pointer;
+    position: relative;
+    background-color: #272727;
+    height: 55px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 0px 20px;
+    font-weight: 200;
+    font-size: 20px;
+}
+
+.person:hover{
+    background-color: #3B3B3B;
+}
