--- a/frontend/src/pages/CreateAssignment.css
+++ b/frontend/src/pages/CreateAssignment.css
@@ -12,16 +12,18 @@ iframe#webpack-dev-server-client-overlay{ display:none!important }
     justify-content: center;
     align-items: center;
     background-color: black; 
-    overflow-y: scroll;
+    
     font-size: 16px;
   }
   
   .contentPP {
+    height: 100vh;
     width: 55vw; /* 80% of the width */
     background-color: #272727;
     display: flex;
     flex-direction: column;
-    gap:20px;
+    gap:30px;
+    overflow-y: scroll;
     padding-left: 64px;
     padding-right: 64px;
     /* Fills the whole height */
