--- a/frontend/src/pages/AssignmentList.css
+++ b/frontend/src/pages/AssignmentList.css
@@ -1,11 +1,34 @@
 /* App.css */
+
+.assignment-list {
+  display: flex;
+  flex: auto;
+}
+.assignment-userData{
+  margin: auto 10px;
+  flex:4;
+  background-color: #323232;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 20px;
+  padding: 2px;
+}
+.assignment-userData p{
+  text-align: center;
+  font-size: larger;
+  color: white;
+}
 .assignments-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     margin-top: 20px;
-    max-width: 60%;
+    height: fit-content;
     margin: auto;
+    flex: 10;
   }
 
   .assignment-head {
@@ -14,10 +37,10 @@
     margin-bottom: 40px;
   }
   .assignment-card {
-    width: 80%;
+    
     padding: 20px;
     margin: 10px;
-    background-color: #727070;
+    background-color: #323232;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
@@ -33,7 +56,7 @@
     background-color: #4CAF50; /* Green */
     color: white;
     padding: 10px 20px;
-    margin: 10px 0;
+    margin: 5px 0;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -85,6 +108,7 @@
     justify-content: space-between; /* Keeps items at the ends */
     align-items: center; /* Vertically centers the items */
     padding: 10px 20px; /* Adds padding around the content */
+    font-size: 40px;
 }
 
 .assignment-head {
@@ -95,19 +119,18 @@
 
 
 .logout-btn {
-    background-color: #4CAF50; /* Green */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  background-color: #4CAF50; /* Green */
+  color: white;
+  padding: 10px 20px;
+  margin: 5px 0;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+    
 }
 
 .logout-btn:hover {
     background-color: #45a049;
 }
 
-.assignment-head {
-    margin-bottom: 50px; /* Removes margin to align properly inside flex container */
-}
 
