--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -1,5 +1,6 @@
 
 
+
 iframe#webpack-dev-server-client-overlay{ display:none!important }
 
 :root {
@@ -14,6 +15,13 @@ iframe#webpack-dev-server-client-overlay{ display:none!important }
     background-color: black; 
     font-size: 16px;
     height: 100vh;
+
+  background-size: cover;
+  background-position: center;
+  height: 100vh; /* Set to full viewport height */
+  width: 100vw; /* Set to full viewport width */
+  /* backface-visibility: hidden; */
+  
   }
   
   .loginPP {
